# Loyalty-Ledger

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
anchor/: Anchor.toml  README.md  package.json
anchor/programs/loyalty_ledger/: Cargo.toml
anchor/programs/loyalty_ledger/src/: lib.rs
anchor/tests/: loyalty_ledger.ts
src/: App.jsx  WalletContextProvider.jsx  index.css  main.jsx
src/components/: AchievementsGrid.jsx  BadgeClaim.jsx  CheckInPanel.jsx  ConfettiBurst.jsx  DemoModeToggle.jsx  FanPassport.jsx  Leaderboard.jsx  ProofOfFandomCard.jsx  RecentActivity.jsx  SportPicker.jsx  UpcomingMatch.jsx
src/data/: teams.js
src/idl/: loyalty_ledger.json
src/lib/: achievements.js  checkin.js  demoMode.js  fanScore.js  memberSince.js  onchainRecords.js  records.js
