[package]
name = "loyalty_ledger"
version = "0.1.0"
description = "On-chain PDA storing streak count per (wallet, sport, team)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "loyalty_ledger"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "1.1.2", features = ["init-if-needed"] }
anchor-spl = { version = "1.1.2", features = ["associated_token"] }
